# icrar-leap-accelerate

./: .clang-tidy  .clang-tidy-to-junit.py  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .produce-ci-metrics.py  .readthedocs.yml  CMakeLists.txt  CpuLeapCalibrator.cc  Dockerfile  Doxyfile  README.md  build-hyades.sh  build.py  pyproject.toml
.gitlab-ci/: before_install_debian.sh  cuda-clang-tidy.sh  cuda_install_debian.sh  docker.sh
.travis/: before_install.sh  before_install_bionic.sh  before_install_focal.sh  build.sh  lint.sh  (+3 more)
src/icrar/compute/: CMakeLists.txt  ReadMe.md
src/icrar/leap-accelerate/: CMakeLists.txt  ReadMe.md  config.cc  config.h.in  pch.h
src/icrar/leap-accelerate-cli/tests/: Arguments.json  CMakeLists.txt  CommandLineTests.cc  E2EPerformanceTests.cc  JSONHelperTests.cc  main.cc
src/icrar/leap-accelerate/algorithm/: Calibrate.cc  ComputeOptions.h  ComputeOptionsDTO.h  ILeapCalibrator.h  LeapCalibratorFactory.cc  LeapCalibratorFactory.h
src/icrar/leap-accelerate/algorithm/cpu/: Calibrate.cc  Calibrate.h  CpuComputeOptions.h  CpuLeapCalibrator.cc  CpuLeapCalibrator.h  PhaseMatrixFunction.cc  PhaseMatrixFunction.h  PhaseRotate.cc  PhaseRotate.h  ValidatedCpuComputeOptions.h
src/icrar/leap-accelerate/algorithm/cuda/: CudaComputeOptions.cc  CudaComputeOptions.cu  CudaComputeOptions.h  CudaLeapCalibrator.cc  CudaLeapCalibrator.cu  CudaLeapCalibrator.h  InverseSolver.cc  PhaseRotate.cu  PhaseRotate.h  ValidatedCudaComputeOptions.cu  ValidatedCudaComputeOptions.h
src/icrar/leap-accelerate/algorithm/cuda/kernel/: ComputePhaseDeltaKernel.cu  ComputePhaseDeltaKernel.h  CopyPhaseDeltaKernel.cu  CopyPhaseDeltaKernel.h  EmptyKernel.cu  EmptyKernel.h  PolarizationsToPhaseAnglesKernel.cu  PolarizationsToPhaseAnglesKernel.h  RotateAvgVisibilitiesKernel.cu  RotateAvgVisibilitiesKernel.h  RotateVisibilitiesAndAverageKernel.cu  RotateVisibilitiesAndAverageKernel.h  RotateVisibilitiesKernel.cu  RotateVisibilitiesKernel.h
src/icrar/leap-accelerate/algorithm/sycl/: SyclLeapCalibrator.cc  SyclLeapCalibrator.h
src/icrar/leap-accelerate/common/: MVPosition.h  MVuvw.h  Range.cc  Range.h  Slice.cc  Slice.h  SphericalDirection.cc  SphericalDirection.h  Tensor3X.h  constants.h  eigen_cache.h  eigen_extensions.h  eigen_stringutils.h  enumutils.h  stream_extensions.h  vector_extensions.h
src/icrar/leap-accelerate/common/config/: Arguments.cc  Arguments.h
src/icrar/leap-accelerate/core/: InputType.cc  InputType.h  compute_implementation.cc  compute_implementation.h  git_revision.cc.in  git_revision.h  ioutils.h  stream_out_type.cc  stream_out_type.h  synchronized_value.h  version.cc  version.h
src/icrar/leap-accelerate/core/log/: Verbosity.cc  Verbosity.h  logging.cc  logging.h
src/icrar/leap-accelerate/core/memory/: ioutils.h  system_memory.cc  system_memory.h
src/icrar/leap-accelerate/core/profiling/: UsageReporter.cc  UsageReporter.h  resource_usage.cc  resource_usage.h  timer.h
src/icrar/leap-accelerate/cuda/: compute_device.h  cuda_info.cu  cuda_info.h  cuda_mapped_matrix.h  cuda_utils.cuh  cusolver_utils.h  device_buffer.h  device_matrix.h  device_tensor.h  device_vector.h  helper_cuda.cuh
src/icrar/leap-accelerate/exception/: exception.cc  exception.h
src/icrar/leap-accelerate/math/: Dense.h  complex_extensions.h  eigen_extensions.cc  eigen_extensions.h  math_conversion.cc  math_conversion.h  vector_extensions.cc  vector_extensions.h
src/icrar/leap-accelerate/math/cpu/: MatrixBaseAddons.h  eigen_extensions.cc  eigen_extensions.h  math.h  matrix_invert.h  vector.h
src/icrar/leap-accelerate/math/cuda/: math.cuh  matrix.cu  matrix.cuh  matrix.h  matrix_add.cu  matrix_epsilon.cu  matrix_epsilon.h  matrix_invert.cu  matrix_invert.h  matrix_multiply.cu  matrix_multiply.cuh  matrix_multiply.h  matrix_op.cu  matrix_op.h  vector.cu  vector_eigen.cuh
src/icrar/leap-accelerate/model/: PlasmaTM.h  visibility.h
src/icrar/leap-accelerate/model/cpu/: CalibrateResult.cc  CalibrateResult.h  Integration.cc  Integration.h  LeapData.cc  MVuvw.cc  MVuvw.h  MetaData.cc  MetaData.h
src/icrar/leap-accelerate/model/cpu/calibration/: BeamCalibration.cc  BeamCalibration.h  Calibration.cc  Calibration.h  CalibrationCollection.h  CalibrationCollection.json
src/icrar/leap-accelerate/model/cuda/: DeviceIntegration.cc  DeviceIntegration.cu  DeviceIntegration.h  DeviceMetaData.cc  DeviceMetaData.cu  DeviceMetaData.h  HostIntegration.h  HostMetaData.h
src/icrar/leap-accelerate/ms/: MeasurementSet.cc  MeasurementSet.h  utils.h
src/icrar/leap-accelerate/python/: LeapAccelerateModule.cc  PyLeap.cc  PyLeapCalibrator.cc  PyLeapCalibrator.h  PyMeasurementSet.cc  PyMeasurementSet.h  PyTensor.h  async.h
src/icrar/leap-accelerate/tests/: CMakeLists.txt  main.cc  pch.h  test_helper.cc  test_helper.h
src/icrar/leap-accelerate/tests/algorithm/: CalibrateTests.cc  PhaseMatrixTests.cc  PhaseRotateTestCaseData.h  PhaseRotateTests.cc
src/icrar/leap-accelerate/tests/common/: EigenExtensionsTests.cc  EigenStringUtilsTests.cc  MVuvwTests.cc  RangeTests.cc  SliceTests.cc  SphericalDirectionTests.cc
src/icrar/leap-accelerate/tests/core/: StreamOutTypeTests.cc  VerbosityTests.cc
src/icrar/leap-accelerate/tests/integration/: CalibrationTests.cc  ConfigTests.cc
src/icrar/leap-accelerate/tests/math/: EigenExtensionsTests.cc  MathConversionTests.cc  MatrixTests.cc  VectorTests.cc  eigen_helper.cc  eigen_helper.h
src/icrar/leap-accelerate/tests/math/cuda/: CudaMatrixEigenTests.cc  CudaMatrixEigenTests.cu  CudaMatrixTests.cc  CudaMatrixTests.cu  CudaVectorTests.cu
src/icrar/leap-accelerate/tests/model/: IntegrationTests.cc  MetaDataTests.cc
src/icrar/leap-accelerate/tests/model/cpu/: MVuvwTests.cc
src/icrar/leap-accelerate/tests/ms/: MSUtilsTests.cc  MeasurementSetTests.cc
src/icrar/leap-accelerate/tests/python/: test_calibrate.py
src/icrar/leap-accelerate/tests/system/: CalibrationTests.cc  ConfigTests.cc
src/icrar/leap-accelerate/tests/testdata/: AA3CpuOutput.json  AA4CpuOutput.json  AA4CudaOutput.json  DefaultOutput.json  MWACpuOutput.json  MWACudaOutput.json
(+78 files in other folders)
