[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12", "setuptools", "wheel"]

[tool.poetry]
authors = [
    "Callan Gray <callan.gray@icrar.org>"
]
description = "Leap Accelerate"
license = "GPLv2"
name = "leap"
readme = "README.md"
build = "build.py"
version = "0.13.0"
packages = [
    { include = "leap" }
]

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = ">=1.20.0"

